26-05-15:
* Using GLib for Unicode file browsing (opening fix TBA)
24-05-15:
* Attempt fix at keyboard layout settings.
19-05-15:
* (Finally) do another 64-bit build
01-05-15:
* Build for the 20150430 release 
03-04-15:
* Build for 20150330 release (ab4d46) + 902919
* Hovering over PDF files in the file browser should now be fast(er)
  - Disabled scanning of fonts in the PDF files (slow, buggy)
03-03-15:
* Build for the 20150228 release (a875b4) + 7fc848
03-01-15:
* Downgraded glib to 2.42.0-1 (XP compatibility)
31-12-14:
* Build for the 20141230 release (6bfa9e)
27-11-14:
* Build for the 20141126 release (c4cea4)
11-11-14:
* Update to latest git version a7edc6
* Fix potential PATH issue for PATHs containing double quotes (GH #1907)
* Switch to different X server port (11) to avoid potential conflict with old
  versions of FontForge (2012/2013 versions)
    - Update VcXsrv_util to allow for dynamic switching of the port used
24-10-14:
* Update to latest git version 6df34b
18-10-14:
* Bug-fix for the file picker dialogue. Makes it much more robust to Windows
  file paths.
14-10-14:
* Build for the 20141014 release
20-06-14:
* Upgrade to latest git version d4abd3
  - SF issue #8 is fixed
  - Menus are now not absurdly wide
* Build FontForge with Cairo support
  - Glyph outlines in the editing window are now anti-aliased
  - The glyph fill operation should be faster
  - Fontconfig is not used any more, unless Cairo is disabled (-usecairo=no)
  - Fonts can be placed in share/fonts or a folder called 'ui-fonts' in your
    preferences folder and FontForge can use them to display the user interface
    correctly. If you installed FontForge, this will be 
    %APPDATA%/FontForge/ui-fonts. This distribution comes pre-bundled with the
    DejaVu fonts. Cantarell, Inconsolata and WenQuanYi has been dropped.
* Bundle the Python executable (python.exe as ffpython.exe)
  - This gives users direct access to the Python distribution bundled with